--- a/jhpfg_node/package.json
+++ b/jhpfg_node/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.3",
     "file": "npm:File@^0.10.2",
     "http": "^0.0.1-security",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "socket.io": "^4.4.1"
   }
