--- a/jhpfg_node/package.json
+++ b/jhpfg_node/package.json
@@ -5,6 +5,7 @@
     "file": "npm:File@^0.10.2",
     "http": "^0.0.1-security",
     "moment": "^2.29.1",
+    "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "socket.io": "^4.4.1"
   }
